2008-03-03  Øyvind Kolås  <pippin@gimp.org>

	* examples/parsexml.c: updated default composition to match current
	GEGL default composition.
	* clutter-gegl.c: (computed_event): reindented code.

2008-01-10  Øyvind Kolås     <pippin@o-hand.com>

	* Imported into svn.

2007-10-20  Øyvind Kolås     <pippin@gimp.org>

	* Duplicated the clutter-cairo tree, and adapted it to render for
	  GEGL instead of cairo.

2007-08-15  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac:
	* Makefile.am:
	* clutter-gegl.pc.in: Bump up to 0.5.0 and require clutter-0.5
	as well.

2007-08-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Bump up to 0.4.0.

	* clutter-gegl.pc.in: Require clutter-0.4.

2007-08-01  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-gegl.c: Now that we ensure that we are not accessing
	the gegl_surface_t object when the texture actor has been destroyed
	before the gegl_t context, we can destroy the surface when disposing
	of the texture.

2007-08-01  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-gegl.c: Attach the ClutterGegl texture actor to the
	surface and use clutter_surface_finish() to dispose of the
	gegl_surface_t we use to generate the gegl context. This plugs
	a reference count bug in the bindings where the context is not
	destroyed before the end of the program.

2007-07-30  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-gegl.[ch]: Add clutter_gegl_set_source_color(), a
	utility function for setting a ClutterColor as the source color
	for a Gegl context.

2007-07-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.am: Install the headers into the clutter-0.x include
	directory, so that each integration library header files are
	self-contained into the include directory of the clutter version
	they are linking to.

	* clutter-gegl.pc.in: Update template, and require gegl.

2007-07-06  Matthew Allum  <mallum@openedhand.com>

	* clutter-gegl.pc.in:
	* configure.ac: